--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://michaelvargas19.github.io/ProfessionalProfile",
+  "homepage": "http://michaelvargas19.github.io",
   "name": "professional-profile",
   "version": "0.1.0",
   "private": true,
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "add": "^2.0.6",
+    "gh-pages": "^3.1.0",
+    "or": "^0.2.0",
+    "yarn": "^1.22.10"
   }
 }
